# Goblin-CMS

./: .clang-format  CMakeLists.txt  Database Communication.drawio  General End Goal And Progress.drawio  README.md  Untitled Diagram.drawio
back-end/: CMakeLists.txt  Dockerfile.remote-cpp-env
back-end/cmake_libs/: ThirdParty.cmake
back-end/goblin_cms/: main.cpp
back-end/goblin_plugins/: logger_main.cpp  shared.hpp
back-end/goblin_tests/: test_main.cpp
back-end/src/: main.cpp
